修正无法启动qh_root_service的bug